2007-04-22  Junichi Uekawa  <dancer@debian.org>

	* examples/execute_installtest.sh: update install test so that it can handle more than one packages.

2007-04-22  Loic Minier <lool@dooz.org>

	* pbuilder-satisfydepends-aptitude: Pass
	Aptitude::ProblemResolver::StepScore and
	Aptitude::CmdLine::Ignore-Trust-Violations flags to aptitude to
	help resolve complex situations relatively common in experimental and
	support unsigned repositories like we do for apt-get.

2007-04-17  Junichi Uekawa  <dancer@debian.org>

	* debian/rules: remove amd64 from build rules.

	* testsuite/run-test.sh (HOOKOPTION): change upgrade testing
	procedure

2007-04-16  Junichi Uekawa  <dancer@debian.org>

	* examples/B92test-pkg: change comment to clarify.

	* pdebuild.1: documentation update: note --debbuildopts and
	--debootstrapopts have different ways of specifying multiple
	options. This probably needs really fixing, but that will happen sometime later.

	* pbuilder.8: ditto.

2007-04-11  Junichi Uekawa  <dancer@debian.org>

	* AUTHORS, etc: remove $Id$, which is CVS specific

2007-04-10  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: update documentation

	* pbuilder-modules: say lenny instead of sarge

	* pbuilder.8: lenny is supported architecture, not sarge

	* pbuilderrc: make lenny default

	* testsuite/run-test.sh: add lenny

2007-04-03  Junichi Uekawa  <dancer@debian.org>

	* Makefile: install pbuilder-satisfydepends-funcs,
	pbuilder-satisfydepends-checkparams

2007-04-02  Loic Minier <lool@dooz.org>
	* pbuilder-satisfydepends-aptitude: check whether the dummy
	dependencies package was truly installed or error out; catches
	situation where "aptitude" did not keep the dummy package but claimed
	the installation was successful.

2007-04-01  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux.1, etc.: 409135: SEE ALSO fix.

2007-04-01  Loic Minier <lool@dooz.org>

	* pbuilder-satisfydepends*: