@@ -3,12 +3,13 @@ pbuilder (0.167) UNRELEASED; urgency=low
   [ Junichi Uekawa ]
   * examples/execute_installtest.sh: update to support multiple packages
     as apt target.
+  * Documentation/pbuilder.xml: Improve documentation wordings.
   
   [ Loic Minier ]
   * Tune aptitude opts in pbuilder-satisfydepends-aptitude to handle complex
     dependencies in experimental and to support unsigned APT repositories.
 
- -- Loic Minier <lool@dooz.org>  Sun, 22 Apr 2007 13:55:09 +0200
+ -- Junichi Uekawa <dancer@debian.org>  Sat,  5 May 2007 19:25:12 +0900
 
 pbuilder (0.166) unstable; urgency=low
 
