@@ -1,3 +1,7 @@
+2007-05-05  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: update and clarify documentation.
+
 2007-04-22  Junichi Uekawa  <dancer@debian.org>
 
 	* examples/execute_installtest.sh: update install test so that it can handle more than one packages.
